src/objects/TMN_Contract__c.object
<CustomObject>
    <fields>
        <fullName>SpendingRequirementsYN__c</fullName>
        <label>CI Spending Requirements Y/N</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StaffingClientRequirementsYN__c</fullName>
        <label>CI Staffing/Client Requirements Y/N</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StaffingClientRequirements__c</fullName>
        <label>CI Staffing/Client Requirements</label>
        <picklist>
            <picklistValues>
                <fullName>Behavioral Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coordinators</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foster Parent Limits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supervisors</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Staffing_ClientRequirementsDetail__c</fullName>
        <label>CI Staffing/Client Requirements Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL-Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OH-Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA-Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <controllingField>ApprovalStage__c</controllingField>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Placement Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SubcontractingTerms__c</fullName>
        <label>CL: Subcontracting Terms</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SubjectToCostReimbursementYN__c</fullName>
        <label>CI Subject to Cost Reimbursement Y/N</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitted_for_approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted for approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SupportServicesDetail__c</fullName>
        <label>CI Support Services Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SupportServicesYN__c</fullName>
        <label>CI Support Services Y/N</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SupportServices__c</fullName>
        <label>CI Support Services</label>
        <picklist>
            <picklistValues>
                <fullName>DSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Therapists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>TermNote60__c</fullName>
        <label>Required Termination Notice</label>
        <picklist>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TermNoteOther__c</fullName>
        <label>TermNote-Other</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TotalDays__c</fullName>
        <formula>Termination_Date__c - Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Contract__c</fullName>
        <label>Type of Contract</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VPO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VPO</label>
        <referenceTo>User</referenceTo>
        <relationshipName>VPO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ValueAnnual__c</fullName>
        <description>A workflow sets this value to the formula field</description>
        <label>Contract Value-Annual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ValueBucket__c</fullName>
        <description>This is the bucket field</description>
        <formula>IF( ValueAnnual__c &lt;200000, &apos;A | 0-199K&apos;, IF( ValueAnnual__c &lt;500000, &apos;B |200-499K&apos;,IF( ValueAnnual__c &lt;575000, &apos;C | 500-574K&apos;, IF( ValueAnnual__c &lt;999999, &apos;D | 575-1 Mil&apos;, IF( ValueAnnual__c &lt; 2000000, &apos;E | 1-2Mil&apos;, IF( ValueAnnual__c &lt; 5000000, &apos;F | 2-5 Mil&apos;, IF( ValueAnnual__c &lt;10000000, &apos;G | 5-10mil&apos;, IF( ValueAnnual__c &lt;20000000, &apos;H | 10-20mil&apos;, IF( ValueAnnual__c &lt;30000000, &apos;I | 20-30mil&apos;, IF( ValueAnnual__c &lt;50000000, &apos;J |30-50mil&apos;, IF(ValueAnnual__c &gt;49999999 , &apos;K | 50+mil&apos; , &apos;&apos;)))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract-Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValueEstStated__c</fullName>
        <label>Contract Value-Type</label>
        <picklist>
            <picklistValues>
                <fullName>Estimated - Annual Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stated - Full Contract Value</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value_Type__c</fullName>
        <inlineHelpText>If Value type is other than &apos;no ceiling, enter # in the text-box to the right</inlineHelpText>
        <label>Funding Value Type</label>
        <picklist>
            <picklistValues>
                <fullName>No Ceiling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName># of Slots</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Max Obligation (NTE)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Contract Value-Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zzActualReminderAudits__c</fullName>
        <formula>Due_Date_CI_Audit_Requirements__c - Reminder_Days_Audit_Requirements__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zzActualReminderAudits</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zzActualReminderCostReportRequired__c</fullName>
        <formula>Due_Date_Cost_Report_Required__c -  Reminder_Days_Cost_Report__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zzActualReminderCostReportRequired</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zzActualReminderOther__c</fullName>
        <formula>Due_Date_Other__c - Reminder_Days_Other__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zzActualReminderOther</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zzActualReminderOutcomeRequirements__c</fullName>
        <formula>Due_Date_Outcome_Requirements__c - Reminder_Days_Outcome__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zzActualReminderOutcomeRequirements</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zzShowSignOff__c</fullName>
        <description>Used to provide VF a way to render a compliance sign off link</description>
        <formula>IF(AND(CASE(ComplianceApproverNumber__c, 
1, IF( App_1_Compliance_Sign_Off__c =False,1,0), 
2, IF( App_2_Compliance_Sign_Off__c =False,1,0), 
3, IF( App_3_Compliance_Sign_Off__c =False,1,0), 
4, IF( App_4_Compliance_Sign_Off__c =False,1,0), 
5, IF( App_5_Compliance_Sign_Off__c =False,1,0), 
6, IF( App_6_Compliance_Sign_Off__c =False,1,0), 
7, IF( App_7_Compliance_Sign_Off__c =False,1,0), 
0)&gt;0, Day_since_Start__c &gt;181,TEXT(Status__c)=&apos;Active&apos;),&apos;True&apos;,&apos;False&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zzShowSignOff</label>
        <type>Text</type>
    </fields>
    <label>-Contract</label>
    <listViews>
        <fullName>Active</fullName>
        <columns>ValueBucket__c</columns>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Termination_Date__c</columns>
        <columns>DaysRemaining__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Active</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Status__c</columns>
        <columns>Termination_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Expired</fullName>
        <columns>Status__c</columns>
        <columns>ValueBucket__c</columns>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Termination_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DaysRemaining__c</field>
            <operation>lessThan</operation>
            <value>0</value>
        </filters>
        <label>Expired</label>
    </listViews>
    <listViews>
        <fullName>Legal_Review</fullName>
        <columns>NAME</columns>
        <columns>LN_ContractTermNoNotice__c</columns>
        <columns>LN_LiabilityInsuranceExceedLimits__c</columns>
        <columns>LN_ManageCareRiskSharing__c</columns>
        <columns>LN_new_payor_or_a_new_service__c</columns>
        <columns>ValueBucket__c</columns>
        <columns>ApprovalStage__c</columns>
        <columns>LegalReviewRequired__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LegalReviewRequired__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>ApprovalStage__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Legal Review Required</label>
    </listViews>
    <listViews>
        <fullName>MyComplianceSignOff</fullName>
        <columns>ValueBucket__c</columns>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>Termination_Date__c</columns>
        <columns>DaysRemaining__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>zzShowSignOff__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filters>
        <label>My Compliance Sign Off</label>
    </listViews>
    <listViews>
        <fullName>Pending_Approval</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>ApprovalStage__c</columns>
        <columns>Approver_1__c</columns>
        <columns>Approver_2__c</columns>
        <columns>Approver_3__c</columns>
        <columns>Approver4__c</columns>
        <columns>Approver5__c</columns>
        <columns>Approver6__c</columns>
        <columns>Approver7__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>Pending Approval</label>
    </listViews>
    <listViews>
        <fullName>x30</fullName>
        <columns>ValueBucket__c</columns>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Termination_Date__c</columns>
        <columns>DaysRemaining__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>DaysRemaining__c</field>
            <operation>lessOrEqual</operation>
            <value>30</value>
        </filters>
        <filters>
            <field>DaysRemaining__c</field>
            <operation>greaterOrEqual</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>NC</value>
        </filters>
        <label>30</label>
    </listViews>
    <listViews>
        <fullName>x60</fullName>
        <columns>ValueBucket__c</columns>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Termination_Date__c</columns>
        <columns>DaysRemaining__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>DaysRemaining__c</field>
            <operation>lessOrEqual</operation>
            <value>60</value>
        </filters>
        <filters>
            <field>DaysRemaining__c</field>
            <operation>greaterOrEqual</operation>
            <value>31</value>
        </filters>
        <label>60</label>
    </listViews>
    <listViews>
        <fullName>x90</fullName>
        <columns>ValueBucket__c</columns>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Termination_Date__c</columns>
        <columns>DaysRemaining__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>DaysRemaining__c</field>
            <operation>lessOrEqual</operation>
            <value>90</value>
        </filters>
        <filters>
            <field>DaysRemaining__c</field>
            <operation>greaterOrEqual</operation>
            <value>61</value>
        </filters>
        <label>90</label>
    </listViews>
    <nameField>
        <label>Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contracts</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Additional_Permits_No</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(  AdditionalPermitsDetail__c )), TEXT( AdditionalPermits__c )=&apos;No&apos;)</errorConditionFormula>
        <errorDisplayField>AdditionalPermitsDetail__c</errorDisplayField>
        <errorMessage>This field is required to be blank when the question &apos;Are any additional permits or licenses required other than ones that currently exist?&apos; when answer is &apos;No&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Additional_Permits_Yes</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(  AdditionalPermitsDetail__c ), TEXT( AdditionalPermits__c )=&apos;Yes&apos;)</errorConditionFormula>
        <errorDisplayField>AdditionalPermitsDetail__c</errorDisplayField>
        <errorMessage>This field is required when the question &apos;Are any additional permits or licenses required other than ones that currently exist?&apos; is answer &apos;Yes&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Annual_funding_limit_no</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(  CL_AnnualFundingLimitDetail__c )), TEXT(  AnnualFundingLimit__c )=&apos;No&apos;)</errorConditionFormula>
        <errorDisplayField>CL_AnnualFundingLimitDetail__c</errorDisplayField>
        <errorMessage>This field is required to be blank when the question &apos;Is there an annual funding limit (total contract amount) in the contract?&apos; when answer is &apos;No&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Annual_funding_limit_yes</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(  CL_AnnualFundingLimitDetail__c ), TEXT(  AnnualFundingLimit__c )=&apos;Yes&apos;)</errorConditionFormula>
        <errorDisplayField>CL_AnnualFundingLimitDetail__c</errorDisplayField>
        <errorMessage>This field is required when the question &apos;Is there an annual funding limit (total contract amount) in the contract?&apos; is answer &apos;yes&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AuditRequirements_No</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(TEXT(  Audit_Requirements__c ))), TEXT(  AuditRequirementsYN__c )=&apos;No&apos;)</errorConditionFormula>
        <errorDisplayField>Audit_Requirements__c</errorDisplayField>
        <errorMessage>A value is require for Audit Requirements to be blank when answer is &apos;No&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AuditRequirements_Yes</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(TEXT(  Audit_Requirements__c )), TEXT(  AuditRequirementsYN__c )=&apos;Yes&apos;)</errorConditionFormula>
        <errorDisplayField>Audit_Requirements__c</errorDisplayField>
        <errorMessage>A value is require for Audit Requirements</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Audit_No_details</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK( AuditReqsDetail__c)), TEXT(AuditRequirementsYN__c )=&apos;No&apos;)</errorConditionFormula>
        <errorDisplayField>AuditReqsDetail__c</errorDisplayField>
        <errorMessage>Audit Requirements Details are required to be blank when answer is &apos;No&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Audit_yes_details</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(  AuditReqsDetail__c  ), TEXT(  AuditRequirementsYN__c )=&apos;Yes&apos;)</errorConditionFormula>
        <errorDisplayField>AuditReqsDetail__c</errorDisplayField>
        <errorMessage>Audit Requirements Details are required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ChainApprover_1</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK( Approver_1__c )),ISBLANK( Approver_2__c ),
OR(
NOT(ISBLANK( Approver_3__c )),
NOT(ISBLANK( Approver4__c )),
NOT(ISBLANK(Approver5__c )),
NOT(ISBLANK( Approver6__c )),
NOT(ISBLANK( Approver7__c ))))</errorConditionFormula>
        <errorMessage>Approvers are required to be sequential 2</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ChainApprover_2</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK( Approver_3__c ),
OR(
NOT(ISBLANK( Approver4__c )),
NOT(ISBLANK(Approver5__c )),
NOT(ISBLANK( Approver6__c )),
NOT(ISBLANK( Approver7__c ))))</errorConditionFormula>
        <errorMessage>Approvers are required to be sequential 3</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ChainApprover_3</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK( Approver4__c ),
OR(NOT(ISBLANK(Approver5__c )),
NOT(ISBLANK( Approver6__c )),
NOT(ISBLANK( Approver7__c ))))</errorConditionFormula>
        <errorMessage>Approvers are required to be sequential 4</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ChainApprover_4</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK( Approver5__c ),
OR(
NOT(ISBLANK( Approver6__c )),
NOT(ISBLANK( Approver7__c ))))</errorConditionFormula>
        <errorMessage>Approvers are required to be sequential 5</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ChainApprover_5</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK( Approver6__c),
NOT(ISBLANK( Approver7__c )))</errorConditionFormula>
        <errorMessage>Approvers are required to be sequential 6</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Company_Name_Blank_with_No</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK( CompanyNameCorrectDetail__c )), TEXT( CompanyNameCorrect__c )=&apos;Yes&apos;)</errorConditionFormula>
        <errorDisplayField>CompanyNameCorrectDetail__c</errorDisplayField>
        <errorMessage>Correct Company Name is required to be blank when answer is &apos;No&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Company_Name_Blank_with_yes</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK( CompanyNameCorrectDetail__c ), TEXT( CompanyNameCorrect__c )=&apos;No&apos;)</errorConditionFormula>
        <errorDisplayField>CompanyNameCorrectDetail__c</errorDisplayField>
        <errorMessage>Correct Company Name is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CostReport_No</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(TEXT( CostReport__c ))), TEXT(CostReportRequiredYN__c )=&apos;No&apos;)</errorConditionFormula>
        <errorDisplayField>CostReport__c</errorDisplayField>
        <errorMessage>Cost report value is required to be blank when answer is &apos;No&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CostReport_Yes</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(TEXT( CostReport__c )), TEXT(   CostReportRequiredYN__c )=&apos;Yes&apos;)</errorConditionFormula>
        <errorDisplayField>CostReport__c</errorDisplayField>
        <errorMessage>Cost report value is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dates_Correct_No</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(  CL_DatesCorrectDetail__c  ), TEXT(  DatesCorrect__c )=&apos;No&apos;)</errorConditionFormula>
        <errorDisplayField>CL_DatesCorrectDetail__c</errorDisplayField>
        <errorMessage>This field is requires when &apos;Do contract dates coincide with when you anticipate providing services?&apos; when answered is &apos;No&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FrequencyOfVisits_No</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(  FrequencyOfVisitsDetail__c)), TEXT(  FrequencyOfVisitsYN__c )=&apos;No&apos;)</errorConditionFormula>
        <errorDisplayField>FrequencyOfVisitsDetail__c</errorDisplayField>
        <errorMessage>Frequency Of Visits Detail is required to be blank when answer is &apos;No&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FrequencyOfVisits_Yes</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(  FrequencyOfVisitsDetail__c), TEXT(  FrequencyOfVisitsYN__c )=&apos;Yes&apos;)</errorConditionFormula>
        <errorDisplayField>FrequencyOfVisitsDetail__c</errorDisplayField>
        <errorMessage>Frequency Of Visits Detail is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Ceiling_value_type</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Value_Type__c , &apos;No Ceiling&apos;), NOT(ISBLANK( Number_of_value_type__c )) )</errorConditionFormula>
        <errorDisplayField>Number_of_value_type__c</errorDisplayField>
        <errorMessage>This Field must be blank unless when selecting &apos;No Ceiling&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Ceiling_value_type_Off</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISBLANK( TEXT(Value_Type__c )),False,IF(AND(NOT( ISPICKVAL( Value_Type__c , &apos;No Ceiling&apos;) ),ISBLANK( Number_of_value_type__c )) ,True,False))</errorConditionFormula>
        <errorDisplayField>Number_of_value_type__c</errorDisplayField>
        <errorMessage>This Field must not be blank unless selecting &apos;No Ceiling&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Special_Requirements_No</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK( SpecialRequirementsDetail__c   )), TEXT(OtherSpecialRequirementsYN__c  )=&apos;No&apos;)</errorConditionFormula>
        <errorDisplayField>SpecialRequirementsDetail__c</errorDisplayField>
        <errorMessage>Details are required to be blank when answer is &apos;No&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Special_Requirements_Yes</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK( SpecialRequirementsDetail__c   ), TEXT(OtherSpecialRequirementsYN__c  )=&apos;Yes&apos;)</errorConditionFormula>
        <errorDisplayField>SpecialRequirementsDetail__c</errorDisplayField>
        <errorMessage>Details are required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Outcome_Requirements_No</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(  OutcomeRequirementsDetail__c )), TEXT(  OutcomeRequirementsYN__c )=&apos;No&apos;)</errorConditionFormula>
        <errorDisplayField>OutcomeRequirementsDetail__c</errorDisplayField>
        <errorMessage>Outcome Requirements Details is required to be blank when answer is &apos;No&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Outcome_Requirements_Yes</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(  OutcomeRequirementsDetail__c ), TEXT(  OutcomeRequirementsYN__c )=&apos;Yes&apos;)</errorConditionFormula>
        <errorDisplayField>OutcomeRequirementsDetail__c</errorDisplayField>
        <errorMessage>Outcome Requirements Details are required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Performance_Based_Contract_No</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(  PerformanceDetail__c )), TEXT(  PerformanceBasedContractYN__c )=&apos;No&apos;)</errorConditionFormula>
        <errorDisplayField>PerformanceDetail__c</errorDisplayField>
        <errorMessage>Performance Based Contract Details is required to be blank when answer is &apos;No&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Performance_Based_Contract_Yes</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(  PerformanceDetail__c ), TEXT(  PerformanceBasedContractYN__c )=&apos;Yes&apos;)</errorConditionFormula>
        <errorDisplayField>PerformanceDetail__c</errorDisplayField>
        <errorMessage>Performance Based Contract Details are required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Personnel_Credential_Requirements_No</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(  PersonnelCredentialRequirementsDetail__c )), TEXT(  Personnel_CredentialRequirementsYN__c )=&apos;No&apos;)</errorConditionFormula>
        <errorDisplayField>PersonnelCredentialRequirementsDetail__c</errorDisplayField>
        <errorMessage>Personnel/Credential Requirements Details is required to be blank when answer is &apos;No&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Personnel_Credential_Requirements_Yes</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(  PersonnelCredentialRequirementsDetail__c ), TEXT(  Personnel_CredentialRequirementsYN__c )=&apos;Yes&apos;)</errorConditionFormula>
        <errorDisplayField>PersonnelCredentialRequirementsDetail__c</errorDisplayField>
        <errorMessage>Personnel/Credential Requirements Details are required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ProviderRequiredTraining_No</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(  ISNULL(ProviderRequiredTraining__c ) ), TEXT(  ProviderRequiredTrainingYN__c )=&apos;No&apos;)</errorConditionFormula>
        <errorDisplayField>ProviderRequiredTraining__c</errorDisplayField>
        <errorMessage>Provider Required Training Value is required to be blank when answer is &apos;No&apos;</errorMessage>
    </validationRules>
</CustomObject>